--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       text-align: center;
       margin: 0;
       padding: 20px 10px;
-      background-color: #f0f4f8;
+      background-color: #ffc0cb; /* rosa Hintergrund */
     }
     h1 {
       color: #1a2a3a;
@@ -44,6 +44,7 @@
 
   <a href="karte_it.pdf" class="language-link"><span class="flag">🇮🇹</span> Italiano (Italienisch)</a>
   <a href="karte_es.pdf" class="language-link"><span class="flag">🇪🇸</span> Español (Spanisch)</a>
+  <a href="karte_en.pdf" class="language-link"><span class="flag">🇬🇧</span> English (Englisch)</a>
   <a href="karte_fr.pdf" class="language-link"><span class="flag">🇫🇷</span> Français (Französisch)</a>
   <a href="karte_ua.pdf" class="language-link"><span class="flag">🇺🇦</span> Українська (Ukrainisch)</a>
   <a href="karte_cz.pdf" class="language-link"><span class="flag">🇨🇿</span> Čeština (Tschechisch)</a>
