--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
   <a href="karte_it.pdf" class="language-link"><span class="flag">🇮🇹</span> Italiano (Italienisch)</a>
   <a href="karte_es.pdf" class="language-link"><span class="flag">🇪🇸</span> Español (Spanisch)</a>
   <a href="karte_en.pdf" class="language-link"><span class="flag">🇬🇧</span> English (Englisch)</a>
+  <a href="karte_hu.pdf" class="language-link"><span class="flag">🇭🇺</span> Magyar (Ungarisch)</a>
   <a href="karte_fr.pdf" class="language-link"><span class="flag">🇫🇷</span> Français (Französisch)</a>
+  
   <a href="karte_ua.pdf" class="language-link"><span class="flag">🇺🇦</span> Українська (Ukrainisch)</a>
   <a href="karte_cz.pdf" class="language-link"><span class="flag">🇨🇿</span> Čeština (Tschechisch)</a>
   <a href="karte_nl.pdf" class="language-link"><span class="flag">🇳🇱</span> Nederlands (Holländisch)</a>
