--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
   </style>
 </head>
 <body>
-  <h1>Bitte wählen Sie Ihre Sprache:</h1>
+  <h1>Choose your Love Language</h1>
 
-  <a href="karte_it.pdf" class="language-link"><span class="flag">🇮🇹</span> Italiano (Italienisch)</a>
-  <a href="karte_es.pdf" class="language-link"><span class="flag">🇪🇸</span> Español (Spanisch)</a>
-  <a href="karte_en.pdf" class="language-link"><span class="flag">🇬🇧</span> English (Englisch)</a>
-  <a href="karte_hu.pdf" class="language-link"><span class="flag">🇭🇺</span> Magyar (Ungarisch)</a>
-  <a href="karte_fr.pdf" class="language-link"><span class="flag">🇫🇷</span> Français (Französisch)</a>
-  <a href="karte_ua.pdf" class="language-link"><span class="flag">🇺🇦</span> Українська (Ukrainisch)</a>
-  <a href="karte_cz.pdf" class="language-link"><span class="flag">🇨🇿</span> Čeština (Tschechisch)</a>
-  <a href="karte_nl.pdf" class="language-link"><span class="flag">🇳🇱</span> Nederlands (Holländisch)</a>
-  <a href="karte_sl.pdf" class="language-link"><span class="flag">🇸🇮</span> Slovenščina (Slowenisch)</a>
-  <a href="karte_bs.pdf" class="language-link"><span class="flag">🇧🇦</span> Bosanski (Bosnisch)</a>
-  <a href="karte_tr.pdf" class="language-link"><span class="flag">🇹🇷</span> Türkçe (Türkisch)</a>
-  <a href="karte_gr.pdf" class="language-link"><span class="flag">🇬🇷</span> Ελληνικά (Griechisch)</a>
+  <a href="karte_it.pdf" class="language-link"><span class="flag">🇮🇹</span> Italiano</a>
+  <a href="karte_es.pdf" class="language-link"><span class="flag">🇪🇸</span> Español</a>
+  <a href="karte_en.pdf" class="language-link"><span class="flag">🇬🇧</span> English</a>
+  <a href="karte_hu.pdf" class="language-link"><span class="flag">🇭🇺</span> Magyar</a>
+  <a href="karte_fr.pdf" class="language-link"><span class="flag">🇫🇷</span> Français</a>
+  <a href="karte_ua.pdf" class="language-link"><span class="flag">🇺🇦</span> Українська</a>
+  <a href="karte_cz.pdf" class="language-link"><span class="flag">🇨🇿</span> Čeština</a>
+  <a href="karte_nl.pdf" class="language-link"><span class="flag">🇳🇱</span> Nederlands</a>
+  <a href="karte_sl.pdf" class="language-link"><span class="flag">🇸🇮</span> Slovenščina</a>
+  <a href="karte_bs.pdf" class="language-link"><span class="flag">🇧🇦</span> Bosanski</a>
+  <a href="karte_tr.pdf" class="language-link"><span class="flag">🇹🇷</span> Türkçe</a>
+  <a href="karte_gr.pdf" class="language-link"><span class="flag">🇬🇷</span> Ελληνικά</a>
 </body>
 </html>
