Change image source from girlande.png to girlande.jpg

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </style>
 </head>
 <body>
-  <img src="girlande.png" alt="Weihnachtsgirlande" style="width:100%;max-width:600px;margin:0 auto 20px;display:block;">
+  <img src="girlande.jpg" alt="Weihnachtsgirlande" style="width:100%;max-width:600px;margin:0 auto 20px;display:block;">
   <h1>Choose your Love Language</h1>
 
   <a href="karte_it.pdf" class="language-link"><span class="flag">🇮🇹</span> Italiano</a>
