--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
       margin-bottom: 25px;
       font-size: 1.6em;
     }
+    .headline {
+      display: inline-block;
+      background: #fff;
+      color: #d72660;
+      padding: 18px 32px;
+      border-radius: 18px;
+      box-shadow: 0 4px 16px rgba(215,38,96,0.12);
+      border: 2px solid #d72660;
+      margin-bottom: 32px;
+      font-size: 2em;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
     .language-link {
       display: block;
       padding: 18px 10px;
@@ -40,20 +53,19 @@
   </style>
 </head>
 <body>
- 
-  <h1>Choose your Love Language</h1>
+  <h1 class="headline">choose your love language:</h1>
 
-  <a href="karte_it.pdf" class="language-link"><span class="flag">🇮🇹</span> Italiano</a>
-  <a href="karte_es.pdf" class="language-link"><span class="flag">🇪🇸</span> Español</a>
-  <a href="karte_en.pdf" class="language-link"><span class="flag">🇬🇧</span> English</a>
-  <a href="karte_hu.pdf" class="language-link"><span class="flag">🇭🇺</span> Magyar</a>
-  <a href="karte_fr.pdf" class="language-link"><span class="flag">🇫🇷</span> Français</a>
-  <a href="karte_ua.pdf" class="language-link"><span class="flag">🇺🇦</span> Українська</a>
-  <a href="karte_cz.pdf" class="language-link"><span class="flag">🇨🇿</span> Čeština</a>
-  <a href="karte_nl.pdf" class="language-link"><span class="flag">🇳🇱</span> Nederlands</a>
-  <a href="karte_sl.pdf" class="language-link"><span class="flag">🇸🇮</span> Slovenščina</a>
-  <a href="karte_bs.pdf" class="language-link"><span class="flag">🇧🇦</span> Bosanski</a>
-  <a href="karte_tr.pdf" class="language-link"><span class="flag">🇹🇷</span> Türkçe</a>
-  <a href="karte_gr.pdf" class="language-link"><span class="flag">🇬🇷</span> Ελληνικά</a>
+  <a href="karte_it.pdf" class="language-link"><span class="flag">🇮🇹</span> Italiano (Italienisch)</a>
+  <a href="karte_es.pdf" class="language-link"><span class="flag">🇪🇸</span> Español (Spanisch)</a>
+  <a href="karte_en.pdf" class="language-link"><span class="flag">🇬🇧</span> English (Englisch)</a>
+  <a href="karte_hu.pdf" class="language-link"><span class="flag">🇭🇺</span> Magyar (Ungarisch)</a>
+  <a href="karte_fr.pdf" class="language-link"><span class="flag">🇫🇷</span> Français (Französisch)</a>
+  <a href="karte_ua.pdf" class="language-link"><span class="flag">🇺🇦</span> Українська (Ukrainisch)</a>
+  <a href="karte_cz.pdf" class="language-link"><span class="flag">🇨🇿</span> Čeština (Tschechisch)</a>
+  <a href="karte_nl.pdf" class="language-link"><span class="flag">🇳🇱</span> Nederlands (Holländisch)</a>
+  <a href="karte_sl.pdf" class="language-link"><span class="flag">🇸🇮</span> Slovenščina (Slowenisch)</a>
+  <a href="karte_bs.pdf" class="language-link"><span class="flag">🇧🇦</span> Bosanski (Bosnisch)</a>
+  <a href="karte_tr.pdf" class="language-link"><span class="flag">🇹🇷</span> Türkçe (Türkisch)</a>
+  <a href="karte_gr.pdf" class="language-link"><span class="flag">🇬🇷</span> Ελληνικά (Griechisch)</a>
 </body>
 </html>
