--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <h1 class="headline">choose your language! :)</h1>
+  <h1 class="headline">choose your ❤️ language! </h1>
 
   <a href="karte_it.pdf" class="language-link"><span class="flag">🇮🇹</span> Italiano</a>
   <a href="karte_es.pdf" class="language-link"><span class="flag">🇪🇸</span> Español</a>
